--- a/lecture1.ipynb
+++ b/lecture1.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyMj2nusl4GKh2sr6tgD38P2",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,35 +17,48 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/choihyunsoo-kangwon/DAP_2022/blob/main/lecture1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 3,
       "metadata": {
         "id": "EY9IjAB0bkZf"
       },
       "outputs": [],
       "source": [
-        "import numpy as np"
+        "import numpy as np\n",
+        "import pandas as pd"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "print(f'numpy version: {np.__version__}')"
+        "print(f'numpy version: {np.__version__}')\n",
+        "print(f'pandas version: {pd.__version__}')"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "xDkmPw2fcKLU",
-        "outputId": "5dd5e12b-70fb-4272-ef39-47538b9f83d3"
+        "outputId": "1cf6d57c-480f-4324-968d-869210f66dfe"
       },
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "numpy version: 1.21.6\n"
+            "numpy version: 1.21.6\n",
+            "pandas version: 1.3.5\n"
           ]
         }
       ]
